Update the .env.example DB Configuration

--- a/.env.example
+++ b/.env.example
@@ -20,11 +20,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=pgsql
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_HOST=dpg-d0jvbgruibrs7392o3a0-a.singapore-postgres.render.com
+DB_PORT=5432
+DB_DATABASE=uniqhire_db
+DB_USERNAME=uniqhire_db_user
+DB_PASSWORD=HNPdJNzoYUoUmUgicDpU10JgARip4Ee1
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
